public class StaticFields
{
    public static string VelocityX { get; } = "velocityX";
    public static string Jump { get; } = "jump";
    public static string Slide { get; } = "slide";
    public static string Mouse { get; } = "Mouse";
    public static string ToolBar { get; } = "ToolBar";
    public static string Ready { get; } = "Ready";
}
